refactoring for anime top parsing partly finished