@@ -1,23 +1,26 @@
 package mapper;
 
 import anime_parsing.Anime;
+import data.Demographic;
 import jakarta.persistence.EntityManager;
+
+import java.util.*;
+import java.util.stream.Collectors;
 
 public class AnimeMapper {
 
     public static data.Anime map(Anime dto, EntityManager em) {
         data.Anime entity = new data.Anime();
         entity.setMalId(dto.malId);
-        seting(entity, dto, em);
-
+        apply(entity, dto, em);
         return entity;
     }
 
     public static void update(data.Anime entity, Anime dto, EntityManager em) {
-        seting(entity, dto, em);
+        apply(entity, dto, em);
     }
 
-    private static void seting(data.Anime entity, Anime dto, EntityManager em) {
+    private static void apply(data.Anime entity, Anime dto, EntityManager em) {
         entity.setUrl(dto.url);
         entity.setStatus(dto.status);
         entity.setTitle(dto.title);
@@ -34,42 +37,55 @@ public class AnimeMapper {
         entity.setSeason(dto.season);
         entity.setYear(dto.year);
 
-        if (dto.producers != null)
-            entity.setProducers(dto.producers.stream()
-                    .map(p -> findOrCreateProducer(p, em))
-                    .toList());
+        updateCollection(entity.getProducers(),
+                dto.producers == null ? List.of() :
+                        dto.producers.stream().map(p -> findOrCreateProducer(p, em)).collect(Collectors.toList()),
+                entity::setProducers);
 
-        if (dto.licensors != null)
-            entity.setLicensors(dto.licensors.stream()
-                    .map(p -> findOrCreateProducer(p, em))
-                    .toList());
+        updateCollection(entity.getLicensors(),
+                dto.licensors == null ? List.of() :
+                        dto.licensors.stream().map(p -> findOrCreateProducer(p, em)).collect(Collectors.toList()),
+                entity::setLicensors);
 
-        if (dto.studios != null)
-            entity.setStudios(dto.studios.stream()
-                    .map(p -> findOrCreateProducer(p, em))
-                    .toList());
+        updateCollection(entity.getStudios(),
+                dto.studios == null ? List.of() :
+                        dto.studios.stream().map(p -> findOrCreateProducer(p, em)).collect(Collectors.toList()),
+                entity::setStudios);
 
-        if (dto.genres != null)
-            entity.setGenres(dto.genres.stream()
-                    .map(g -> findOrCreateGenre(g, em))
-                    .toList());
+        updateCollection(entity.getGenres(),
+                dto.genres == null ? List.of() :
+                        dto.genres.stream().map(g -> findOrCreateGenre(g, em)).collect(Collectors.toList()),
+                entity::setGenres);
 
-        if (dto.themes != null)
-            entity.setThemes(dto.themes.stream()
-                    .map(g -> findOrCreateGenre(g, em))
-                    .toList());
+        updateCollection(entity.getThemes(),
+                dto.themes == null ? List.of() :
+                        dto.themes.stream().map(g -> findOrCreateGenre(g, em)).collect(Collectors.toList()),
+                entity::setThemes);
 
-        if (dto.demographics != null)
-            entity.setDemographics(dto.demographics.stream()
-                    .map(d -> findOrCreateDemographic(d, em))
-                    .toList());
+        updateCollection(entity.getDemographics(),
+                dto.demographics == null ? List.of() :
+                        dto.demographics.stream().map(d -> findOrCreateDemographic(d, em)).collect(Collectors.toList()),
+                entity::setDemographics);
     }
 
+    private static <T> void updateCollection(List<T> current, List<T> updated, java.util.function.Consumer<List<T>> setter) {
+        if (current == null) {
+            setter.accept(new ArrayList<>(updated));
+            return;
+        }
+        try {
+            current.clear();
+            LinkedHashSet<T> unique = new LinkedHashSet<>(updated);
+            current.addAll(unique);
+        } catch (UnsupportedOperationException e) {
+            List<T> mutable = new ArrayList<>(new LinkedHashSet<>(updated));
+            setter.accept(mutable);
+        }
+    }
 
     private static data.Producer findOrCreateProducer(anime_parsing.Producer dto, EntityManager em) {
         data.Producer existing = em.find(data.Producer.class, dto.malId);
         if (existing != null) return existing;
-
         data.Producer p = new data.Producer();
         p.setMalId(dto.malId);
         p.setName(dto.name);
@@ -82,7 +98,6 @@ public class AnimeMapper {
     private static data.Genre findOrCreateGenre(anime_parsing.Genre dto, EntityManager em) {
         data.Genre existing = em.find(data.Genre.class, dto.malId);
         if (existing != null) return existing;
-
         data.Genre g = new data.Genre();
         g.setMalId(dto.malId);
         g.setName(dto.name);
@@ -95,7 +110,6 @@ public class AnimeMapper {
     private static data.Demographic findOrCreateDemographic(anime_parsing.Demographic dto, EntityManager em) {
         data.Demographic existing = em.find(data.Demographic.class, dto.malId);
         if (existing != null) return existing;
-
         data.Demographic d = new data.Demographic();
         d.setMalId(dto.malId);
         d.setName(dto.name);
